--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "0.1.3",
   "main": "index.js",
   "license": "MIT",
-  "repository": "martpie/next-plugin-transpile-modules",
+  "author": "Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>",
   "description": "Next.js plugin to transpile code from node_modules (supports TypeScript)",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/martpie/next-plugin-transpile-modules.git"
+  },
+  "bugs": {
+    "url": "https://github.com/martpie/next-plugin-transpile-modules/issues"
+  },
+  "homepage": "https://github.com/martpie/next-plugin-transpile-modules#readme",
   "keywords": [
     "next",
     "next.js",
@@ -14,6 +25,6 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "webpack": "^3.10.0"
+    "webpack": "^4.26.1"
   }
 }
