--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>",
   "description": "Next.js plugin to transpile code from node_modules (supports TypeScript)",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "files": [
     "index.js"
@@ -28,6 +29,12 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "webpack": "^4.26.1"
+    "eslint": "5.12.1",
+    "eslint-config-semistandard": "^13.0.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.15.0",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-standard": "4.0.0"
   }
 }
