--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "next-transpile-modules",
-  "version": "2.0.0",
+  "name": "@weco/next-plugin-transpile-modules",
+  "version": "2.0.1",
   "main": "index.js",
   "license": "MIT",
-  "author": "Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>",
+  "author": "Wellcome Collection <digital@wellcomecollection.org>",
   "description": "Next.js plugin to transpile code from node_modules (supports TypeScript)",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,12 +14,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martpie/next-transpile-modules.git"
+    "url": "git+https://github.com/wellcometrust/next-plugin-transpile-modules.git"
   },
   "bugs": {
-    "url": "https://github.com/martpie/next-transpile-modules/issues"
+    "url": "https://github.com/wellcometrust/next-plugin-transpile-modules/issues"
   },
-  "homepage": "https://github.com/martpie/next-transpile-modules#readme",
+  "homepage": "https://github.com/wellcometrust/next-plugin-transpile-modules#readme",
   "keywords": [
     "next",
     "next.js",
