--- a/package.json
+++ b/package.json
@@ -30,18 +30,17 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "anymatch": "^2.0.0",
+    "anymatch": "2.0.0",
     "eslint": "5.12.1",
-    "eslint-config-semistandard": "^13.0.0",
+    "eslint-config-semistandard": "13.0.0",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.15.0",
-    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-jest": "22.3.0",
     "eslint-plugin-node": "8.0.1",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
-    "i": "^0.3.6",
-    "jest": "^24.1.0",
-    "npm": "^6.8.0",
-    "rewire": "^4.0.1"
+    "jest": "24.1.0",
+    "npm": "6.8.0",
+    "rewire": "4.0.1"
   }
 }
